@@ -1,5 +1,14 @@
+//
+//  UnitTests - IsAnythingTest.m
+//  Copyright 2009 www.hamcrest.org. See LICENSE.txt
+//
+//  Created by: Jon Reid
+//
+
+    // Self
 #import "AbstractMatcherTest.h"
 
+    // OCHamcrest
 #define HC_SHORTHAND
 #import <OCHamcrest/HCIsAnything.h>
 #import <OCHamcrest/HCMatcherAssert.h>
