@@ -1,5 +1,14 @@
+//
+//  UnitTests - MatcherAssertTest.m
+//  Copyright 2009 www.hamcrest.org. See LICENSE.txt
+//
+//  Created by: Jon Reid
+//
+
+    // Inherited
 #import <SenTestingKit/SenTestingKit.h>
 
+    // OCHamcrest
 #define HC_SHORTHAND
 #import <OCHamcrest/HCMatcherAssert.h>
 #import <OCHamcrest/HCIsEqual.h>
