@@ -1,3 +1,5 @@
+* Renamed framework to OCHamcrest. (Aug 11, 2009)
+
 * Added support for Mac OS X 10.4 projects. (Jul 7, 2009)
 
 * Fixed compiler errors when used with Objective-C++ (.mm files). (Jan 28, 2009)
